syntax = "proto3";

package ru.labs.grading;

option java_package = "ru.labs.grading";
option java_multiple_files = true;

message MetaData {
  string name = 1;
  string type = 2;
  string developerFullName = 3;
  string taskId = 4;
}

message File {
  bytes content = 1;
}

enum Status {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message FileUploadRequest {
  oneof request {
    MetaData metadata = 1;
    File file = 2;
  }
}

message FileUploadResponse {
  Status status = 2;
}

service FileUploadService {
  rpc uploadFile (stream FileUploadRequest) returns (FileUploadResponse);
}